# openrigil-firmware

./: .gitignore  25519.c  25519_test.c  CMakeLists.txt  LICENSE  Makefile  README.md  bn.c  bn.h  bootrom.ld  csr.c  dcd_zenithal.c  dcd_zenithal.h  device.c  entry.S  flash.c  flash.h  littlefs_api.c  littlefs_api.h  main.c  mbedtls-config.h  mmm.c  mmm.h  mmm_test.c  plic.h  riscv32.cmake  rsa.c  rsa2048.c  rsa4096.c  rsa_test.c  uart.c  uart.h
crypto/: 25519.c  bn.c  rsa.c  rsa4096.c
include/: bn.h  flash.h  interrupt.h  littlefs_api.h
src/: interrupt.c  littlefs_api.c  main.c  uart.c  usbd_conf.c
test/: rsa_test.c
